--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ascii"
+name = "ascii-cli"
 version = "1.1.0"
 edition = "2021"
 authors = ["Atle Skaanes Ahrenfeldt <atle.skaanes@gmail.com>"]
